syntax = "proto3";

package resource.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";

// 菜单服务
service MenuService {
  // 查询菜单列表
  rpc List (pagination.PagingRequest) returns (ListMenuResponse) {}

  // 统计菜单数量
  rpc Count (pagination.PagingRequest) returns (CountMenuResponse) {}

  // 查询菜单详情
  rpc Get (GetMenuRequest) returns (Menu) {}

  // 创建菜单
  rpc Create (CreateMenuRequest) returns (google.protobuf.Empty) {}

  // 更新菜单
  rpc Update (UpdateMenuRequest) returns (google.protobuf.Empty) {}

  // 删除菜单
  rpc Delete (DeleteMenuRequest) returns (google.protobuf.Empty) {}
}

// 菜单
message Menu {
  // 菜单类型
  enum Type {
    CATALOG = 0;    // 目录
    MENU = 1;       // 菜单
    BUTTON = 2;     // 按钮
    EMBEDDED = 3;   // 内嵌
    LINK = 4;       // 外链
  }

  // 菜单状态
  enum Status {
    OFF = 0;         // 禁用
    ON = 1;          // 启用
  }

  optional uint32 id = 1 [
    json_name = "id",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "菜单ID"
    }
  ]; // 菜单ID

  optional Status status = 2 [
    json_name = "status",
    (gnostic.openapi.v3.property) = {description: "菜单状态"}
  ]; // 菜单状态

  optional Type type = 3 [
    json_name = "type",
    (gnostic.openapi.v3.property) = {description: "菜单类型"}
  ]; // 菜单类型

  optional string path = 10 [
    json_name = "path",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "路由路径"
    }
  ]; // 路由路径

  optional string redirect = 11 [
    json_name = "redirect",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "重定向地址"
    }
  ]; // 重定向地址

  optional string alias = 12 [
    json_name = "alias",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "路由别名"
    }
  ]; // 路由别名

  optional string name = 13 [
    json_name = "name",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "路由命名，然后我们可以使用 name 而不是 path 来传递 to 属性给 <router-link>。"
    }
  ]; // 路由命名，然后我们可以使用 name 而不是 path 来传递 to 属性给 <router-link>。

  optional string component = 14 [
    json_name = "component",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {description: "指向的组件"}
  ]; // 指向的组件

  optional MenuMeta meta = 15 [
    json_name = "meta",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {description: "路由元信息"}
  ]; // 路由元信息

  optional uint32 parent_id = 50 [json_name = "parentId", (gnostic.openapi.v3.property) = {description: "父节点ID"}];  // 父节点ID
  repeated Menu children = 51 [json_name = "children", (gnostic.openapi.v3.property) = {description: "子节点树"}];  // 子节点树

  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "创建者用户ID"}]; // 创建者用户ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "更新者用户ID"}]; // 更新者用户ID
  optional uint32 deleted_by = 102 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "删除者用户ID"}]; // 删除者用户ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "创建时间"}];// 创建时间
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "更新时间"}];// 更新时间
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "删除时间"}];// 删除时间
}

// 路由元信息
message MenuMeta {
  optional string activeIcon = 1 [
    json_name = "activeIcon",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "激活图标，用于：菜单、tab"
    }
  ]; // 激活图标，用于：菜单、tab

  optional string activePath = 2 [
    json_name = "activePath",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "当前激活的菜单，有时候不想激活现有菜单，需要激活父级菜单时使用"
    }
  ]; // 当前激活的菜单，有时候不想激活现有菜单，需要激活父级菜单时使用

  optional bool affixTab = 3 [
    json_name = "affixTab",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "是否固定标签页"
    }
  ]; // 是否固定标签页

  optional int32 affixTabOrder = 4 [
    json_name = "affixTabOrder",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "固定标签页的顺序"
    }
  ]; // 固定标签页的顺序

  repeated string authority = 5 [
    json_name = "authority",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "权限列表，需要特定的角色标识才可以访问"
    }
  ]; // 权限列表，需要特定的角色标识才可以访问

  optional string badge = 6 [
    json_name = "badge",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "徽标"
    }
  ]; // 徽标

  optional string badgeType = 7 [
    json_name = "badgeType",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "徽标类型",
      enum: [{yaml: "dot"}, {yaml: "normal"}]
    }
  ]; // 徽标类型

  optional string badgeVariants = 8 [
    json_name = "badgeVariants",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "徽标颜色",
      enum: [{yaml: "default"}, {yaml: "destructive"}, {yaml: "primary"}, {yaml: "success"}, {yaml: "warning"}]
    }
  ]; // 徽标颜色

  optional bool hideChildrenInMenu = 9 [
    json_name = "hideChildrenInMenu",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "当前路由的子级在菜单中不展现"
    }
  ]; // 当前路由的子级在菜单中不展现

  optional bool hideInBreadcrumb = 10 [
    json_name = "hideInBreadcrumb",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "当前路由在面包屑中不展现"
    }
  ]; // 当前路由在面包屑中不展现

  optional bool hideInMenu = 11 [
    json_name = "hideInMenu",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "当前路由在菜单中不展现"
    }
  ]; // 当前路由在菜单中不展现

  optional bool hideInTab = 12 [
    json_name = "hideInTab",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "当前路由在标签页不展现"
    }
  ]; // 当前路由在标签页不展现

  optional string icon = 13 [
    json_name = "icon",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "图标，用于：菜单、标签页"
    }
  ]; // 图标，用于：菜单、标签页

  optional string iframeSrc = 14 [
    json_name = "iframeSrc",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "iframe 地址"
    }
  ]; // iframe 地址

  optional bool ignoreAccess = 15 [
    json_name = "ignoreAccess",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "忽略权限，直接可以访问"
    }
  ]; // 忽略权限，直接可以访问

  optional bool keepAlive = 16 [
    json_name = "keepAlive",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "开启KeepAlive缓存"
    }
  ]; // 开启KeepAlive缓存

  optional string link = 17 [
    json_name = "link",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "外链-跳转路径"
    }
  ]; // 外链-跳转路径

  optional bool loaded = 18 [
    json_name = "loaded",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "路由是否已经加载过"
    }
  ]; // 路由是否已经加载过

  optional int32 maxNumOfOpenTab = 19 [
    json_name = "maxNumOfOpenTab",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "标签页最大打开数量"
    }
  ]; // 标签页最大打开数量

  optional bool menuVisibleWithForbidden = 20 [
    json_name = "menuVisibleWithForbidden",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "菜单可以看到，但是访问会被重定向到403"
    }
  ]; // 菜单可以看到，但是访问会被重定向到403

  optional bool openInNewWindow = 21 [
    json_name = "openInNewWindow",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "在新窗口打开"
    }
  ]; // 在新窗口打开

  optional int32 order = 22 [
    json_name = "order",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "排序编号，用于路由->菜单排序"
    }
  ]; // 排序编号，用于路由->菜单排序

  optional string title = 23 [
    json_name = "title",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "标题名称，路由上显示的标题"
    }
  ]; // 标题名称，路由上显示的标题
}

// 路由项
message MenuRouteItem {
  repeated MenuRouteItem children = 1 [json_name = "children", (gnostic.openapi.v3.property) = {description: "子节点树"}]; // 子节点树

  optional string path = 10 [
    json_name = "path",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "路由路径"
    }
  ]; // 路由路径

  optional string redirect = 11 [
    json_name = "redirect",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "重定向地址"
    }
  ]; // 重定向地址

  optional string alias = 12 [
    json_name = "alias",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "路由别名"
    }
  ]; // 路由别名

  optional string name = 13 [
    json_name = "name",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "路由命名，然后我们可以使用 name 而不是 path 来传递 to 属性给 <router-link>。"
    }
  ]; // 路由命名，然后我们可以使用 name 而不是 path 来传递 to 属性给 <router-link>。

  optional string component = 14 [
    json_name = "component",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "指向的组件"
    }
  ]; // 指向的组件

  optional MenuMeta meta = 15 [
    json_name = "meta",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "路由元信息"
    }
  ]; // 路由元信息
}

// 查询菜单列表 - 回应
message ListMenuResponse {
  repeated Menu items = 1;
  uint64 total = 2;
}

// 查询菜单详情 - 请求
message GetMenuRequest {
  oneof query_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "ID", read_only: true},
      json_name = "id"
    ]; // ID
  }

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "视图字段过滤器，用于控制返回的字段"
    }
  ]; // 视图字段过滤器，用于控制返回的字段
}

// 创建菜单 - 请求
message CreateMenuRequest {
  Menu data = 1;
}

// 更新菜单 - 请求
message UpdateMenuRequest {
  uint32 id = 1;

  Menu data = 2;

  google.protobuf.FieldMask update_mask = 3 [
    (gnostic.openapi.v3.property) = {
      description: "要更新的字段列表",
      example: {yaml : "id,realname,username"}
    },
    json_name = "updateMask"
  ]; // 要更新的字段列表

  optional bool allow_missing = 4 [
    (gnostic.openapi.v3.property) = {description: "如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。"},
    json_name = "allowMissing"
  ]; // 如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。
}

// 删除菜单 - 请求
message DeleteMenuRequest {
  optional uint32 operator_id = 1 [
    (gnostic.openapi.v3.property) = {description: "操作用户ID", read_only: true},
    json_name = "operatorId"
  ]; // 操作用户ID

  uint32 id = 2;
}

message CountMenuResponse {
  uint64 count = 1;
}
